@@ -16,7 +16,7 @@
 class Block {
 	/* public*/ var $mAddress, $mUser, $mBy, $mReason, $mTimestamp, $mAuto, $mId, $mExpiry,
 				$mRangeStart, $mRangeEnd, $mAnonOnly, $mEnableAutoblock, $mHideName,
-				$mBlockEmail, $mByName, $mAngryAutoblock;
+				$mBlockEmail, $mByName, $mAngryAutoblock, $mAllowUsertalk;
 	/* private */ var $mNetworkBits, $mIntegerAddr, $mForUpdate, $mFromMaster;
 
 	const EB_KEEP_EXPIRED = 1;
@@ -25,7 +25,7 @@ class Block {
 
 	function __construct( $address = '', $user = 0, $by = 0, $reason = '',
 		$timestamp = '' , $auto = 0, $expiry = '', $anonOnly = 0, $createAccount = 0, $enableAutoblock = 0,
-		$hideName = 0, $blockEmail = 0 )
+		$hideName = 0, $blockEmail = 0, $allowUsertalk = 0 )
 	{
 		$this->mId = 0;
 		# Expand valid IPv6 addresses
@@ -42,6 +42,7 @@ class Block {
 		$this->mEnableAutoblock = $enableAutoblock;
 		$this->mHideName = $hideName;
 		$this->mBlockEmail = $blockEmail;
+		$this->mAllowUsertalk = $allowUsertalk;
 		$this->mForUpdate = false;
 		$this->mFromMaster = false;
 		$this->mByName = false;
@@ -95,7 +96,7 @@ class Block {
 		$this->mAddress = $this->mReason = $this->mTimestamp = '';
 		$this->mId = $this->mAnonOnly = $this->mCreateAccount =
 			$this->mEnableAutoblock = $this->mAuto = $this->mUser =
-			$this->mBy = $this->mHideName = $this->mBlockEmail = 0;
+			$this->mBy = $this->mHideName = $this->mBlockEmail = $this->mAllowUsertalk = 0;
 		$this->mByName = false;
 	}
 
@@ -303,6 +304,7 @@ class Block {
 		$this->mCreateAccount = $row->ipb_create_account;
 		$this->mEnableAutoblock = $row->ipb_enable_autoblock;
 		$this->mBlockEmail = $row->ipb_block_email;
+		$this->mAllowUsertalk = $row->ipb_allow_usertalk;
 		$this->mHideName = $row->ipb_deleted;
 		$this->mId = $row->ipb_id;
 		$this->mExpiry = self::decodeExpiry( $row->ipb_expiry );
@@ -437,7 +439,8 @@ class Block {
 				'ipb_range_start' => $this->mRangeStart,
 				'ipb_range_end' => $this->mRangeEnd,
 				'ipb_deleted'	=> $this->mHideName,
-				'ipb_block_email' => $this->mBlockEmail
+				'ipb_block_email' => $this->mBlockEmail,
+				'ipb_allow_usertalk' => $this->mAllowUsertalk
 			), 'Block::insert', array( 'IGNORE' )
 		);
 		$affected = $dbw->affectedRows();
@@ -473,7 +476,8 @@ class Block {
 				'ipb_range_start' => $this->mRangeStart,
 				'ipb_range_end' => $this->mRangeEnd,
 				'ipb_deleted'	=> $this->mHideName,
-				'ipb_block_email' => $this->mBlockEmail ),
+				'ipb_block_email' => $this->mBlockEmail,
+				'ipb_allow_usertalk' => $this->mAllowUsertalk ),
 			array( 'ipb_id' => $this->mId ),
 			'Block::update' );
 
