@@ -146,7 +146,8 @@ $wgMysqlUpdates = array(
 	
 	// 1.14
 	array( 'add_field', 'site_stats',     'ss_active_users',  'patch-ss_active_users.sql' ),
-	array( 'do_active_users_init' )
+	array( 'do_active_users_init' ),
+	array( 'add_field', 'ipblocks',     'ipb_allow_usertalk',  'patch-ipb_allow_usertalk.sql' )
 );
 
 
